deploy/ya.userworker.yaml
apiVersion: v1
kind: Service
metadata:
  name: userworker
  labels:
    service: userworker
spec:
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    service: userworker
    layer: security
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userworker
  labels:
    service: userworker
    layer: security
spec:
  replicas: 1
  selector:
    matchLabels:
      service: userworker
      layer: security
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: userworker
        layer: security
    spec:
      containers:
        - image: cr.yandex/crp5g4efguolv0dodoa6/ya.userworker:0.2.7.0-build.15
          imagePullPolicy: IfNotPresent
          args: []
          name: userworker
          resources:
            requests:
              memory: 128Mi
            limits:
              memory: 512Mi
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /status
              port: 8080
