deploy/ya.userworker-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ya.userworker-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "64k"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - ya-userworker.venando.ru
      secretName: letsencrypt
  rules:
    - host: ya-userworker.venando.ru
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: userworker
              port:
                number: 80
